--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,13 @@
    "version": 2,
    "routes": [
       {
-         "src": "/assets/(.*)",
+         "src": "/fonts/(.*)",
+         "headers": {
+            "cache-control": "public, max-age=31536000, immutable"
+         }
+      },
+      {
+         "src": "/assets/fonts/(.*)",
          "headers": {
             "cache-control": "public, max-age=31536000, immutable"
          }
