--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,20 @@
    "version": 2,
    "routes": [
       {
+         "src": "/assets/(.*)",
+         "headers": {
+            "cache-control": "public, max-age=31536000, immutable"
+         }
+      },
+      {
          "src": "/fonts/(.*)",
          "headers": {
             "cache-control": "public, max-age=31536000, immutable"
          }
       },
       {
-         "src": "/assets/fonts/(.*)",
-         "headers": {
-            "cache-control": "public, max-age=31536000, immutable"
-         }
+         "src": "/(.*\\.(js|css|woff2|woff|ttf|eot|png|jpg|jpeg|gif|svg|ico|webp))",
+         "dest": "/$1"
       },
       {
          "src": "/(.*)",
